Fix: unset z-index set in parent theme.

--- a/assets/css/scss/base/_body.scss
+++ b/assets/css/scss/base/_body.scss
@@ -101,3 +101,8 @@ div.page-template {
   mask-image: none !important;
   -webkit-mask-image: none !important;
 }
+
+// Unset Z-index that is set in the parent theme.
+div.page-template > * {
+  z-index: unset;
+}
